✅ add artificial test data to make test pass
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>